# train

./: .gitignore  Cargo.toml  README.md
src/: convert.rs  data.rs  events_window.rs  inferer.rs  lib.rs  main.rs  model_persist.rs  output.rs  trainer.rs
src/train/: data.rs  mod.rs  model.rs  trainer.rs
