[package]
name = "train"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
home = "0.5.9"
serde_json = "1.0.117"
# Trim down features for tokio later
tokio = { version = "1.37.0", features = ["full"] }
# burn = { version = "0.13.2", features = ["train", "wgpu"] }
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["train", "wgpu"] }

# shared-types = { git = "https://github.com/mentics-online-ml/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
# series-store = { git = "https://github.com/mentics-online-ml/series-store.git", branch = "main" }
series-store = { path = "../series-store" }
# kv-store = { git = "https://github.com/mentics-online-ml/kv-store.git", branch = "main" }
kv-store = { path = "../kv-store" }
