[package]
name = "train"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
serde_json = "1.0.117"
futures = "0.3.30"
async-scoped = { version = "0.9.0", features = ["tokio", "use-tokio"] }
# Trim down features for tokio later
tokio = { version = "1.37.0", features = ["full"] }
# burn = { version = "0.13.2", features = ["train", "wgpu"] }
# burn = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["std", "autodiff", "wgpu", "fusion"] }
burn = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["std", "autodiff", "fusion", "candle-cuda"] }
# burn = { path = "../../rust/burn", default-features = false, features = ["std", "autodiff", "wgpu", "fusion"] }
# or maybe could use "train" and "sqlite_bundled" features instead of "autodiff" if I ever need dataset feature

# shared-types = { git = "https://github.com/mentics-online-ml/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
# shared-burn = { git = "https://github.com/mentics-online-ml/shared-burn.git", branch = "main" }
shared-burn = { path = "../shared-burn" }
# series-store = { git = "https://github.com/mentics-online-ml/series-store.git", branch = "main" }
series-store = { path = "../series-store" }
# kv-store = { git = "https://github.com/mentics-online-ml/kv-store.git", branch = "main" }
kv-store = { path = "../kv-store" }
itertools = "0.13.0"

#[target.x86_64-unknown-linux-gnu]
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
